Increase PermGen and timeouts