@@ -1,2 +1,2 @@
-USER_MEM_ARGS="-Xms1024m -Xmx1024m"
+USER_MEM_ARGS="-Xms1024m -Xmx1024m -XX:PermSize=512m -XX:MaxPermSize=512m"
 JAVA_OPTIONS="-Djava.security.egd=file:///dev/urandom"
